--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
         </div>
     </nav>
 
-    <!-- HERO SECTION (ГЛАВНЫЙ ЭКРАН) -->
     <section class="pt-32 pb-20 hero-bg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center">
-            <!-- Текст -->
+
             <div class="md:w-1/2 text-center md:text-left mb-10 md:mb-0">
                 <div class="inline-block px-3 py-1 mb-4 text-xs font-semibold tracking-wider text-indigo-600 uppercase bg-indigo-100 rounded-full">
                     New Technology 2025
@@ -72,16 +71,13 @@
                     </a>
                 </div>
             </div>
-            <!-- Картинка (Место для скриншота чата) -->
             <div class="md:w-1/2 flex justify-center relative">
                 <div class="absolute inset-0 bg-gradient-to-r from-indigo-300 to-purple-300 rounded-full filter blur-3xl opacity-30 animate-pulse"></div>
-                <!-- ЗАМЕНИТЕ src НА ВАШ СКРИНШОТ ЧАТА -->
-                <img src="https://placehold.co/350x700/png?text=Chat+Screenshot" alt="AI Chat Demo" class="relative rounded-3xl shadow-2xl border-8 border-white w-64 md:w-80 transform rotate-3 hover:rotate-0 transition duration-500">
+                <img src="images/languages_select_ru.png" alt="AI Chat Demo" class="relative rounded-3xl shadow-2xl border-8 border-white w-64 md:w-80 transform rotate-3 hover:rotate-0 transition duration-500">
             </div>
         </div>
     </section>
 
-    <!-- ПРЕИМУЩЕСТВА (FEATURES) -->
     <section id="features" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -90,7 +86,7 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <!-- Feature 1 -->
+
                 <div class="p-6 bg-gray-50 rounded-xl hover:shadow-lg transition duration-300 border border-gray-100">
                     <div class="w-12 h-12 bg-indigo-100 rounded-lg flex items-center justify-center mb-4 text-indigo-600">
                         <i class="fa-solid fa-comments text-xl"></i>
@@ -98,7 +94,7 @@
                     <h3 class="text-xl font-bold mb-2">Живой диалог</h3>
                     <p class="text-gray-600 text-sm">Понимает живую речь ("хочу на ногти во вторник"), а не заставляет нажимать кнопки меню.</p>
                 </div>
-                <!-- Feature 2 -->
+
                 <div class="p-6 bg-gray-50 rounded-xl hover:shadow-lg transition duration-300 border border-gray-100">
                     <div class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center mb-4 text-purple-600">
                         <i class="fa-solid fa-calendar-check text-xl"></i>
@@ -106,7 +102,7 @@
                     <h3 class="text-xl font-bold mb-2">Полная синхронизация</h3>
                     <p class="text-gray-600 text-sm">Мгновенная запись в Google Calendar мастера. Никаких накладок и двойных записей.</p>
                 </div>
-                <!-- Feature 3 -->
+
                 <div class="p-6 bg-gray-50 rounded-xl hover:shadow-lg transition duration-300 border border-gray-100">
                     <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center mb-4 text-blue-600">
                         <i class="fa-solid fa-language text-xl"></i>
@@ -114,7 +110,7 @@
                     <h3 class="text-xl font-bold mb-2">Мультиязычность</h3>
                     <p class="text-gray-600 text-sm">Свободно общается на украинском, английском, чешском и русском языках.</p>
                 </div>
-                <!-- Feature 4 -->
+
                 <div class="p-6 bg-gray-50 rounded-xl hover:shadow-lg transition duration-300 border border-gray-100">
                     <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-4 text-green-600">
                         <i class="fa-solid fa-bell text-xl"></i>
@@ -126,14 +122,13 @@
         </div>
     </section>
 
-    <!-- СРАВНЕНИЕ (BEFORE / AFTER) -->
     <section class="py-20 bg-gray-900 text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-4">Почему выбирают AI?</h2>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-                <!-- Old Way -->
+
                 <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700 opacity-70">
                     <h3 class="text-2xl font-bold mb-6 text-gray-400">Обычный администратор</h3>
                     <ul class="space-y-4">
@@ -143,7 +138,7 @@
                         <li class="flex items-center"><i class="fa-solid fa-xmark text-red-500 mr-3 w-6"></i> Стоит от $800/мес</li>
                     </ul>
                 </div>
-                <!-- AI Way -->
+
                 <div class="bg-indigo-900 p-8 rounded-2xl border border-indigo-500 shadow-2xl transform md:scale-105">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="text-2xl font-bold text-white">Наш AI Агент</h3>
@@ -160,7 +155,6 @@
         </div>
     </section>
 
-    <!-- ROI (ЦИФРЫ) -->
     <section id="roi" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
@@ -180,7 +174,6 @@
         </div>
     </section>
 
-    <!-- DEMO (ГАЛЕРЕЯ) -->
     <section id="demo" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -189,17 +182,14 @@
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Скриншот 1: Календарь -->
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📅 Google Calendar Мастера</h4>
-                    <!-- ЗАМЕНИТЕ src НА ВАШ СКРИНШОТ КАЛЕНДАРЯ -->
                     <img src="https://placehold.co/600x400/png?text=Google+Calendar+Screenshot" alt="Calendar Sync" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Четкие события с именами клиентов и услугами. Цветовое кодирование.</p>
                 </div>
-                <!-- Скриншот 2: Таблица -->
+
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📊 CRM (Google Sheets)</h4>
-                    <!-- ЗАМЕНИТЕ src НА ВАШ СКРИНШОТ ТАБЛИЦЫ -->
                     <img src="https://placehold.co/600x400/png?text=Google+Sheets+CRM" alt="CRM Table" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Автоматическое ведение базы клиентов, статусов и истории визитов.</p>
                 </div>
@@ -207,7 +197,6 @@
         </div>
     </section>
 
-    <!-- CONTACT (CTA) -->
     <section id="contact" class="py-20 bg-indigo-600 text-white">
         <div class="max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Готовы автоматизировать свой бизнес?</h2>
@@ -225,7 +214,6 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <p>&copy; 2025 AI Automation Pro. Все права защищены.</p>
