--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 </h1>
                 <p class="text-lg text-gray-600 mb-8 leading-relaxed">
                     Забудьте о пропущенных звонках и путанице в календарях. 
-                    Наш AI-агент работает 24/7, общается на 4 языках и автоматически управляет записью в Google Calendar.
+                    Наш AI-агент работает 24/7, общается на нескольких языках и автоматически управляет записью в Google Calendar.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center md:justify-start gap-4">
-                    <a href="#contact" class="bg-indigo-600 text-white px-8 py-4 rounded-lg font-bold shadow-lg hover:shadow-xl hover:bg-indigo-700 transition transform hover:-translate-y-1">
+                    <a href="https://t.me/beauy_salon_bot" class="bg-indigo-600 text-white px-8 py-4 rounded-lg font-bold shadow-lg hover:shadow-xl hover:bg-indigo-700 transition transform hover:-translate-y-1">
                         Попробовать демо
                     </a>
                     <a href="#features" class="bg-white text-indigo-600 border border-indigo-200 px-8 py-4 rounded-lg font-bold shadow hover:bg-gray-50 transition">
@@ -184,13 +184,13 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📅 Google Calendar Мастера</h4>
-                    <img src="https://placehold.co/600x400/png?text=Google+Calendar+Screenshot" alt="Calendar Sync" class="rounded-lg w-full object-cover">
+                    <img src="/images/google_calendar.jpg" alt="Calendar Sync" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Четкие события с именами клиентов и услугами. Цветовое кодирование.</p>
                 </div>
 
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📊 CRM (Google Sheets)</h4>
-                    <img src="https://placehold.co/600x400/png?text=Google+Sheets+CRM" alt="CRM Table" class="rounded-lg w-full object-cover">
+                    <img src="/images/clients_table.jpg" alt="CRM Table" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Автоматическое ведение базы клиентов, статусов и истории визитов.</p>
                 </div>
             </div>
