--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📅 Google Calendar Мастера</h4>
-                    <img src="/images/google_calendar.jpg" alt="Calendar Sync" class="rounded-lg w-full object-cover">
+                    <img src="images/google_calendar.jpg" alt="Calendar Sync" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Четкие события с именами клиентов и услугами. Цветовое кодирование.</p>
                 </div>
 
                 <div class="bg-white p-4 rounded-xl shadow-md">
                     <h4 class="font-bold mb-4 text-gray-700">📊 CRM (Google Sheets)</h4>
-                    <img src="/images/clients_table.jpg" alt="CRM Table" class="rounded-lg w-full object-cover">
+                    <img src="images/clients_table.jpg" alt="CRM Table" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Автоматическое ведение базы клиентов, статусов и истории визитов.</p>
                 </div>
             </div>
