--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Администратор для Салона Красоты | Автоматизация бизнеса</title>
+    <title>AI-Администратор для записи 24/7 | Автоматизация бизнеса</title>
     <!-- Подключение Tailwind CSS (Стили) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Подключение иконок FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Шрифты Google -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    
+    <link rel="icon" type="image/png" href="favicon.png">
+    <meta property="og:title" content="AI-Администратор для  для записи 24/7">
+    <meta property="og:description" content="Запись 24/7, синхронизация с Google Calendar и никаких ошибок. Попробуйте демо!">
+    <meta property="og:image" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/og-image.jpg">
+    <meta property="og:url" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/">
+    <meta property="og:type" content="website">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .gradient-text {
