--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Шрифты Google -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta property="og:title" content="AI-Администратор для  для записи 24/7">
+    <meta property="og:title" content="AI-Администратор для записи 24/7">
     <meta property="og:description" content="Запись 24/7, синхронизация с Google Calendar и никаких ошибок. Попробуйте демо!">
     <meta property="og:image" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/og-image.jpg">
     <meta property="og:url" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/">
@@ -57,7 +57,7 @@
 
             <div class="md:w-1/2 text-center md:text-left mb-10 md:mb-0">
                 <div class="inline-block px-3 py-1 mb-4 text-xs font-semibold tracking-wider text-indigo-600 uppercase bg-indigo-100 rounded-full">
-                    New Technology 2025
+                    New Technology 2026
                 </div>
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-6">
                     Ваш идеальный администратор <br>
@@ -86,7 +86,7 @@
     <section id="features" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
-                <h2 class="text-3xl font-bold text-gray-900 mb-4">Больше чем просто чат-бот</h2>
+                <h2 class="text-3xl font-bold text-gray-900 mb-4">Больше, чем просто чат-бот</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">Мы создали экосистему, которая закрывает 99% рутинных задач администратора салона красоты.</p>
             </div>
 
@@ -113,7 +113,7 @@
                         <i class="fa-solid fa-language text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2">Мультиязычность</h3>
-                    <p class="text-gray-600 text-sm">Свободно общается на украинском, английском, чешском и русском языках.</p>
+                    <p class="text-gray-600 text-sm">Свободно общается на языках ваших клиентов.</p>
                 </div>
 
                 <div class="p-6 bg-gray-50 rounded-xl hover:shadow-lg transition duration-300 border border-gray-100">
@@ -206,7 +206,7 @@
         <div class="max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Готовы автоматизировать свой бизнес?</h2>
             <p class="text-indigo-100 text-lg mb-10">
-                Мы предлагаем настройку "под ключ". Получите бесплатную консультацию и демо-доступ уже сегодня.
+                Мы предлагаем настройку "под ключ". Получите бесплатную консультацию уже сегодня.
             </p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
                 <a href="https://t.me/ВАШ_НИКНЕЙМ" target="_blank" class="bg-white text-indigo-600 px-8 py-4 rounded-lg font-bold shadow-lg hover:bg-gray-100 transition flex items-center justify-center">
@@ -221,7 +221,7 @@
 
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <p>&copy; 2025 AI Automation Pro. Все права защищены.</p>
+            <p>&copy; 2025 - 2026 Web Solutions For You. Все права защищены.</p>
         </div>
     </footer>
 
