--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Шрифты Google -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta property="og:title" content="AI-Администратор для записи 24/7">
-    <meta property="og:description" content="Запись 24/7, синхронизация с Google Calendar и никаких ошибок. Попробуйте демо!">
+    <meta property="og:title" content="ИИ-Администратор и продавец, работающий 24/7">
+    <meta property="og:description" content="Естественное общение, синхронизация с сервисами администрирования и никаких ошибок. Попробуйте демо!">
     <meta property="og:image" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/og-image.jpg">
     <meta property="og:url" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/">
     <meta property="og:type" content="website">
@@ -42,6 +42,7 @@
                     <a href="#features" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Возможности</a>
                     <a href="#roi" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Выгода</a>
                     <a href="#demo" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Демо</a>
+                    <a href="#approach" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Индивидуальный подход</a>
                 </div>
                 <div>
                     <a href="#contact" class="bg-indigo-600 hover:bg-indigo-700 text-white px-5 py-2 rounded-full font-medium transition duration-300">
@@ -61,11 +62,15 @@
                 </div>
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-6">
                     Ваш идеальный администратор <br>
+                    и продавец –<br>
                     <span class="gradient-text">Искусственный Интеллект</span>
                 </h1>
                 <p class="text-lg text-gray-600 mb-8 leading-relaxed">
-                    Забудьте о пропущенных звонках и путанице в календарях. 
-                    Наш AI-агент работает 24/7, общается на нескольких языках и автоматически управляет записью в Google Calendar.
+                    Забудьте о пропущенных звонках. Наш AI-агент не просто записывает, а 
+                    <span class="font-semibold text-indigo-600">удерживает клиентов</span>, 
+                    консультирует по услугам и 
+                    <span class="font-semibold text-indigo-600">продаёт 24/7</span>, 
+                    общается на нескольких языках и автоматически вносит записи в CRM-системы.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center md:justify-start gap-4">
                     <a href="https://t.me/beauy_salon_bot" class="bg-indigo-600 text-white px-8 py-4 rounded-lg font-bold shadow-lg hover:shadow-xl hover:bg-indigo-700 transition transform hover:-translate-y-1">
@@ -87,7 +92,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold text-gray-900 mb-4">Больше, чем просто чат-бот</h2>
-                <p class="text-gray-600 max-w-2xl mx-auto">Мы создали экосистему, которая закрывает 99% рутинных задач администратора салона красоты.</p>
+                <p class="text-gray-600 max-w-2xl mx-auto">Мы создали экосистему, которая закрывает 99% рутинных задач администратора по коммуникации с клиентами.</p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -121,7 +126,7 @@
                         <i class="fa-solid fa-bell text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-2">Умные напоминания</h3>
-                    <p class="text-gray-600 text-sm">Автоматически напоминает клиенту за 24 часа до визита, снижая неявки.</p>
+                    <p class="text-gray-600 text-sm">Автоматически напоминает клиенту о предстоящем визите, снижая неявки.</p>
                 </div>
             </div>
         </div>
@@ -197,6 +202,65 @@
                     <h4 class="font-bold mb-4 text-gray-700">📊 CRM (Google Sheets)</h4>
                     <img src="images/clients_table.jpg" alt="CRM Table" class="rounded-lg w-full object-cover">
                     <p class="mt-4 text-sm text-gray-500">Автоматическое ведение базы клиентов, статусов и истории визитов.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ГНУЧКЕ НАЛАШТУВАННЯ (CUSTOMIZATION) -->
+    <section id="approach" class="py-20 bg-white border-t border-gray-100">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <div class="inline-block px-3 py-1 mb-4 text-xs font-semibold tracking-wider text-purple-600 uppercase bg-purple-100 rounded-full">
+                    Индивидуальный подход
+                </div>
+                <h2 class="text-3xl font-bold text-gray-900 mb-4">Гибкая настройка под Ваш бизнес</h2>
+                <p class="text-gray-600 max-w-2xl mx-auto">
+                    Это не просто "шаблонный бот". Мы обучаем ИИ-модель специфике именно вашего бизнеса, чтобы он стал полноценной частью команды.
+                </p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <!-- Card 1: База Знань -->
+                <div class="group p-8 bg-white rounded-2xl border border-gray-200 hover:border-indigo-500 hover:shadow-xl transition duration-300 relative overflow-hidden">
+                    <div class="absolute top-0 right-0 -mt-4 -mr-4 w-24 h-24 bg-indigo-50 rounded-full group-hover:bg-indigo-100 transition"></div>
+                    <div class="relative z-10">
+                        <div class="w-14 h-14 bg-indigo-600 rounded-xl flex items-center justify-center mb-6 text-white shadow-lg">
+                            <i class="fa-solid fa-book-open text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Ваша База Знаний</h3>
+                        <p class="text-gray-600 leading-relaxed">
+                            Мы загрузим в бота ваш прайс-лист, правила отмены, описание услуг и ответы на частые вопросы. Бот будет знать о вашем бизнесе всё.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Card 2: Tone of Voice -->
+                <div class="group p-8 bg-white rounded-2xl border border-gray-200 hover:border-purple-500 hover:shadow-xl transition duration-300 relative overflow-hidden">
+                    <div class="absolute top-0 right-0 -mt-4 -mr-4 w-24 h-24 bg-purple-50 rounded-full group-hover:bg-purple-100 transition"></div>
+                    <div class="relative z-10">
+                        <div class="w-14 h-14 bg-purple-600 rounded-xl flex items-center justify-center mb-6 text-white shadow-lg">
+                            <i class="fa-solid fa-sliders text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Стиль общения</h3>
+                        <p class="text-gray-600 leading-relaxed">
+                            Строгий и деловой "на Вы" или дружелюбный с эмодзи? Вы сами выбираете Tone of Voice, чтобы бот общался так, как принято у вас.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Card 3: Легке управління -->
+                <div class="group p-8 bg-white rounded-2xl border border-gray-200 hover:border-pink-500 hover:shadow-xl transition duration-300 relative overflow-hidden">
+                    <div class="absolute top-0 right-0 -mt-4 -mr-4 w-24 h-24 bg-pink-50 rounded-full group-hover:bg-pink-100 transition"></div>
+                    <div class="relative z-10">
+                        <div class="w-14 h-14 bg-pink-600 rounded-xl flex items-center justify-center mb-6 text-white shadow-lg">
+                            <i class="fa-solid fa-users-gear text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-3">Мастера и График</h3>
+                        <p class="text-gray-600 leading-relaxed">
+                            Новый мастер? Изменилась цена? Ушли в отпуск? Вы сможете менять эти данные за 1 минуту через простую Google Таблицу без программиста.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
