--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Шрифты Google -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta property="og:title" content="ИИ-Администратор и продавец, работающий 24/7">
+    <meta property="og:title" content="ИИ-Администратор, консультант и продавец, работающий 24/7">
     <meta property="og:description" content="Естественное общение, синхронизация с сервисами администрирования и никаких ошибок. Попробуйте демо!">
     <meta property="og:image" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/og-image.jpg">
     <meta property="og:url" content="https://eugeneche.github.io/beauty-salon-ai-agent-ru/">
