Added contacts WA, Viber

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-4">Почему выбирают AI?</h2>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+            <div class="grid grid-cols-1 md:grid-cols-1 gap-10">
 
-                <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700 opacity-70">
+<!--                 <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700 opacity-70">
                     <h3 class="text-2xl font-bold mb-6 text-gray-400">Обычный администратор</h3>
                     <ul class="space-y-4">
                         <li class="flex items-center"><i class="fa-solid fa-xmark text-red-500 mr-3 w-6"></i> Спит ночью, пропускает клиентов</li>
@@ -147,12 +147,12 @@
                         <li class="flex items-center"><i class="fa-solid fa-xmark text-red-500 mr-3 w-6"></i> Забывает отправить напоминание</li>
                         <li class="flex items-center"><i class="fa-solid fa-xmark text-red-500 mr-3 w-6"></i> Стоит от $800/мес</li>
                     </ul>
-                </div>
+                </div> -->
 
-                <div class="bg-indigo-900 p-8 rounded-2xl border border-indigo-500 shadow-2xl transform md:scale-105">
+                <div class="bg-indigo-900 p-8 rounded-2xl border border-indigo-500 shadow-2xl transform md:scale-105" style="width: 50%; min-width: fit-content; margin: 0 auto;">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="text-2xl font-bold text-white">Наш AI Агент</h3>
-                        <span class="bg-green-500 text-xs font-bold px-2 py-1 rounded text-white">РЕКОМЕНДУЕМ</span>
+                        <!-- <span class="bg-green-500 text-xs font-bold px-2 py-1 rounded text-white">РЕКОМЕНДУЕМ</span> -->
                     </div>
                     <ul class="space-y-4">
                         <li class="flex items-center"><i class="fa-solid fa-check text-green-400 mr-3 w-6"></i> Отвечает мгновенно 24/7</li>
@@ -270,13 +270,23 @@
         <div class="max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Готовы автоматизировать свой бизнес?</h2>
             <p class="text-indigo-100 text-lg mb-10">
-                Мы предлагаем настройку "под ключ". Получите бесплатную консультацию уже сегодня.
+                Мы предлагаем настройку "под ключ". Получите бесплатную консультацию.
             </p>
-            <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="https://t.me/ВАШ_НИКНЕЙМ" target="_blank" class="bg-white text-indigo-600 px-8 py-4 rounded-lg font-bold shadow-lg hover:bg-gray-100 transition flex items-center justify-center">
+            <div class="flex flex-col sm:flex-row justify-center gap-4 flex-wrap">
+                <a href="https://t.me/eugene_ch" target="_blank"
+                    class="bg-white text-indigo-600 px-8 py-4 rounded-lg font-bold shadow-lg hover:bg-gray-100 transition flex items-center justify-center">
                     <i class="fa-brands fa-telegram text-2xl mr-3"></i> Написать в Telegram
                 </a>
-                <a href="mailto:your@email.com" class="bg-indigo-700 border border-indigo-500 text-white px-8 py-4 rounded-lg font-bold hover:bg-indigo-800 transition flex items-center justify-center">
+                <a href="viber://chat?number=+380990020375" target="_blank"
+                    class="bg-[#7360f2] text-white px-8 py-4 rounded-lg font-bold shadow-lg hover:bg-[#6050dc] transition flex items-center justify-center">
+                    <i class="fa-brands fa-viber text-2xl mr-3"></i> Написать в Viber
+                </a>
+                <a href="https://wa.me/+420770671058" target="_blank"
+                    class="bg-[#25D366] text-white px-8 py-4 rounded-lg font-bold shadow-lg hover:bg-[#20bd5a] transition flex items-center justify-center">
+                    <i class="fa-brands fa-whatsapp text-2xl mr-3"></i> Написать в WhatsApp
+                </a>
+                <a href="mailto:dev.websolutionsforyou@gmail.com"
+                    class="bg-indigo-700 border border-indigo-500 text-white px-8 py-4 rounded-lg font-bold hover:bg-indigo-800 transition flex items-center justify-center">
                     <i class="fa-solid fa-envelope text-xl mr-3"></i> Отправить Email
                 </a>
             </div>
