--- a/index.html
+++ b/index.html
@@ -36,16 +36,20 @@
             <div class="flex justify-between h-16 items-center">
                 <div class="flex-shrink-0 flex items-center">
                     <i class="fa-solid fa-robot text-indigo-600 text-2xl mr-2"></i>
-                    <span class="font-bold text-xl tracking-tight">AI Admin Pro</span>
+                    <span class="font-bold text-sm sm:text-xl tracking-tight">AI Admin Pro</span>
                 </div>
-                <div class="hidden md:block">
+                <div class="hidden lg:block">
                     <a href="#features" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Возможности</a>
                     <a href="#roi" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Выгода</a>
-                    <a href="#demo" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Демо</a>
+                    <a href="#demo" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Детали</a>
                     <a href="#approach" class="text-gray-600 hover:text-indigo-600 px-3 py-2 font-medium">Индивидуальный подход</a>
                 </div>
-                <div>
-                    <a href="#contact" class="bg-indigo-600 hover:bg-indigo-700 text-white px-5 py-2 rounded-full font-medium transition duration-300">
+                <div class="flex-shrink-0 flex items-center">
+                    <a href="https://t.me/beauy_salon_bot"
+                        class="bg-indigo-600 hover:bg-indigo-700 text-white px-5 py-2 mr-2 rounded-full font-medium transition duration-300">
+                        Демо
+                    </a>
+                    <a href="#contact" class="bg-violet-600 hover:bg-violet-700 text-white px-5 py-2 rounded-full font-medium transition duration-300">
                         Заказать
                     </a>
                 </div>
