--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Администратор для записи 24/7 | Автоматизация бизнеса</title>
+    <meta name="description" content="Естественное общение, синхронизация с сервисами администрирования и никаких ошибок. Попробуйте демо!">
     <!-- Подключение Tailwind CSS (Стили) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Подключение иконок FontAwesome -->
